--- a/8-Queen Evolutionary Algorithm.ipynb
+++ b/8-Queen Evolutionary Algorithm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "id": "fb78face",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,17 @@
     "# Import needed modules here\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import chess"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import chess\n",
+    "import random\n",
+    "\n",
+    "# Permutation-Based Genetic Algorithm"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b431b027",
+   "id": "7f775955",
    "metadata": {},
    "source": [
     "## Representation\n",
@@ -29,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2eff0212",
+   "id": "c396aca1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "78b69f72",
+   "id": "7aba5849",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d6bf5b4",
+   "id": "fed86ded",
    "metadata": {},
    "source": [
     "## Fitness Function\n",
@@ -95,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "999521f6",
+   "id": "8ff78839",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cf02d08",
+   "id": "ec461016",
    "metadata": {},
    "source": [
     "The Total Penalty of a single board configuration then is the sum of all of the Queens' Penalties. We also only need to consider the number of *unique* checks as if the Queen on Column A checks the Queen on Column B, then the Queen on Column B must also in return check the Queen on Column A. Instead of marking the total checks between the two Queens as 2, we'll simply mark their shared check as 1.\n",
@@ -141,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "cc023a1f",
+   "id": "8fc93d36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36c3174e",
+   "id": "42f2445b",
    "metadata": {},
    "source": [
     "The best way to calculate Penalties with these definitions then is to see if the value of the targeted Queen is as far away from the value of the checking Queen as the position of the targeted Queen is from the position of the checking Queen.\n",
@@ -169,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7c80a4f3",
+   "id": "2451d270",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +193,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e43eb691",
+   "id": "24f62e8b",
+   "metadata": {},
+   "source": [
+    "We could also use the code below to brute force our way through the 8! (40,320) permutations and find each of the 92 configurations, but let's see if there's a more graceful way than forcing through an `O(n!)` time complexity problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "ffd64b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "test = itertools.permutations([1,2,3,4,5,6,7,8], r=8)\n",
+    "solutions = 0\n",
+    "for i in test:\n",
+    "    if (fitness(i)==28):\n",
+    "        solutions+=1\n",
+    "print(solutions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32f50a5c",
    "metadata": {},
    "source": [
     "## Variation Operators\n",
@@ -198,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a95949ca",
+   "id": "2c5e0791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,19 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "be33121f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "da0de466",
+   "id": "a732a071",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TODO: Crossover, Parent/Survivor selectors, init/terminate conditions, main evo loop, some means of datakeeping."
+   ]
   }
  ],
  "metadata": {
